# inertia-rs

./: Cargo.toml  README.md
examples/: Cargo.toml  README.md
examples/rocket-svelte/: .gitignore  Cargo.toml  README.md
examples/rocket-svelte/src/: main.rs
examples/rocket-svelte/svelte-app/: package-lock.json  package.json  webpack.config.js
examples/rocket-svelte/svelte-app/src/Pages/: Hello.svelte
examples/rocket-svelte/templates/: app.html.hbs
src/: lib.rs  rocket.rs  tower.rs
