[package]
name = "inertia_rs"
version = "0.2.0"
edition = "2018"
license = "MIT"
homepage = "https://github.com/stuarth/inertia-rs"
repository = "https://github.com/stuarth/inertia-rs"
description = "Inertia.js for Rust"
keywords = ["inertia", "web", "framework", "rocket"]
categories = ["web-programming"]
readme = "README.md"

[dependencies]
http = "0.2"
rocket = { version = "0.5.0-rc.1", features = ["json"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.4.8", features = ["full"], optional = true }

[features]
default = ["rocket", "tower"]
