[package]
name = "inertia_rs"
version = "0.2.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/stuarth/inertia-rs"
repository = "https://github.com/stuarth/inertia-rs"
description = "Inertia.js for Rust"
keywords = ["inertia", "web", "framework", "rocket"]
categories = ["web-programming"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["json"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

[features]
default = ["rocket"]
