[package]
name = "rocket-svelte"
version = "0.1.0"
edition = "2018"
workspace = "../"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inertia_rs = { path = "../..", features = ["rocket"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1", features = ["derive"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars"]